k8s/adminer.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: foodable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: adminer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: foodable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
